@@ -9,15 +9,17 @@
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
+        <github.login>none</github.login>
+        <github.token>none</github.token>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <maven.compiler.parameters>true</maven.compiler.parameters>
 
-        <korekto-toolkit.version>1.3.6</korekto-toolkit.version>
+        <korekto-toolkit.version>2.0.1</korekto-toolkit.version>
         <logback-classic.version>1.4.5</logback-classic.version>
-        <maven.version>3.8.6</maven.version>
-        <maven-resolver.version>1.9.2</maven-resolver.version>
+        <maven.version>3.9.9</maven.version>
+        <maven-resolver.version>1.9.22</maven-resolver.version>
         <byte-buddy.version>1.12.20</byte-buddy.version>
 
         <record-builder.version>34</record-builder.version>
@@ -28,8 +30,8 @@
         <antlr4.version>4.11.1</antlr4.version>
         <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
         <exec-maven-plugin.version>3.1.0</exec-maven-plugin.version>
-        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
-        <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
+        <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
+        <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
     </properties>
 
     <scm>
@@ -153,6 +155,12 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
+                    <configuration>
+                        <argLine>
+                            --add-opens=java.base/java.lang=ALL-UNNAMED
+                            --add-opens=java.base/java.util=ALL-UNNAMED
+                        </argLine>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -162,7 +170,16 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>${exec-maven-plugin.version}</version>
                 <configuration>
-                    <mainClass>com.github.lernejo.korekto.toolkit.launcher.GradingJobLauncher</mainClass>
+                    <executable>java</executable>
+                    <arguments>
+                        <argument>-classpath</argument>
+                        <classpath/>
+                        <argument>--add-opens=java.base/java.lang=ALL-UNNAMED</argument>
+                        <argument>--add-opens=java.base/java.util=ALL-UNNAMED</argument>
+                        <argument>-Dgithub_token=${github.token}</argument>
+                        <argument>com.github.lernejo.korekto.toolkit.launcher.GradingJobLauncher</argument>
+                        <argument>--slug=${github.login}</argument>
+                    </arguments>
                 </configuration>
             </plugin>
             <plugin>
